@@ -6640,82 +6640,6 @@ SCIP_VAR* SCIPgetSlackVarIndicator(
 }
 
 
-/** sets slack variable corresponding to indicator constraint */
-SCIP_RETCODE SCIPsetSlackVarIndicator(
-   SCIP*                 scip,               /**< SCIP data structure */
-   SCIP_CONS*            cons,               /**< indicator constraint */
-   SCIP_VAR*             slackvar            /**< slack variable */
-   )
-{
-   SCIP_CONSDATA* consdata;
-   SCIP_CONSHDLR* conshdlr;
-   SCIP_CONSHDLRDATA* conshdlrdata;
-   SCIP_Bool deleted;
-
-   assert( cons != NULL );
-   assert( strcmp(SCIPconshdlrGetName(SCIPconsGetHdlr(cons)), CONSHDLR_NAME) == 0 );
-   assert( slackvar != NULL );
-
-   /* get constraint data */
-   consdata = SCIPconsGetData(cons);
-   assert( consdata != NULL );
-   assert( consdata->slackvar != NULL );
-
-   /* free event on previous slack variable */
-   conshdlrdata = NULL;
-   if ( SCIPconsIsTransformed(cons) )
-   {
-      conshdlr = SCIPconsGetHdlr(cons);
-      assert( conshdlr != NULL );
-      assert( strcmp(SCIPconshdlrGetName(conshdlr), CONSHDLR_NAME) == 0 );
-      conshdlrdata = SCIPconshdlrGetData(conshdlr);
-      assert( conshdlrdata != NULL );
-
-      if ( SCIPgetStage(scip) >= SCIP_STAGE_TRANSFORMING && SCIPgetStage(scip) <= SCIP_STAGE_SOLVED )
-      {
-         SCIP_CALL( SCIPdropVarEvent(scip, consdata->slackvar, SCIP_EVENTTYPE_BOUNDCHANGED, conshdlrdata->eventhdlrbound, (SCIP_EVENTDATA*) consdata, -1) );
-      }
-   }
-
-   /* free old slack variable */
-   SCIP_CALL( SCIPdelVar(scip, consdata->slackvar, &deleted) );
-   SCIP_CALL( SCIPreleaseVar(scip, &(consdata->slackvar) ) );
-
-   /* mark new slack variable not to be multi-aggregated */
-   SCIP_CALL( SCIPmarkDoNotMultaggrVar(scip, slackvar) );
-
-   /* handle transformed case  */
-   if ( SCIPconsIsTransformed(cons) )
-   {
-      SCIP_VAR* var;
-
-      /* make sure we have the transformed variable */
-      SCIP_CALL( SCIPgetTransformedVar(scip, slackvar, &var) );
-      assert( var != NULL );
-      consdata->slackvar = var;
-      SCIP_CALL( SCIPcaptureVar(scip, var) );
-
-      /* catch bound change events on slack variable and adjust nfixednonzero */
-      if ( consdata->linconsactive )
-      {
-         assert( conshdlrdata != NULL );
-         SCIP_CALL( SCIPcatchVarEvent(scip, var, SCIP_EVENTTYPE_BOUNDCHANGED, conshdlrdata->eventhdlrbound, (SCIP_EVENTDATA*) consdata, NULL) );
-
-         /* if slack variable is fixed to be nonzero */
-         if ( SCIPisFeasPositive(scip, SCIPvarGetLbLocal(var)) )
-            ++(consdata->nfixednonzero);
-      }
-   }
-   else
-   {
-      consdata->slackvar = slackvar;
-      SCIP_CALL( SCIPcaptureVar(scip, slackvar) );
-   }
-
-   return SCIP_OKAY;
-}
-
-
 /** checks whether indicator constraint is violated w.r.t. sol */
 SCIP_Bool SCIPisViolatedIndicator(
    SCIP*                 scip,               /**< SCIP data structure */
